# bio-mos

./: .gitignore  README.md  gbif_query.R  requirements.txt
airflow_pipeline/: README.md
airflow_test/dags/: bigquery_load.py  gbif_modules.py  main_pipeline.py
bio-mos/: pyproject.toml
bio-mos/bio-mos/: soil_info.py
biomos/: README.md  climate_lib_test.ipynb  pyproject.toml
biomos/biomos/: human_interference.py  land_cover.py  soil_info.py  species.py
biomos/tests/: test_biomos.py
climate/: Readme.md  bq_upload.R  climate_data.ipynb  climate_query.R  data_stitch.R  gbif_functions.R  test.R
climate/scratchpad/: bq_upload.R  data_stitch.R
dashboard/: README.md  dash.py  gbif_combined.csv  human_interference_sample.csv  map1.html  visualization.ipynb  visualization_2.ipynb  weather.csv
dashboard/assets/: gbif_combined.csv  soil_temp.csv
data/: invasive_species.csv  name_mapping_global.csv
gbif/: README.md  pyproject.toml
gbif/gbif/: climate.py  climate_lib_test.ipynb  human_interference.py
gbif/tests/: test_gbif.py
human_interference/: combined_human_interference.ipynb  gbif_python.ipynb  human_infrastructure.ipynb  invasive_species.ipynb  light_pollution.ipynb  visualization.ipynb
land_cover/: land_cover_data.ipynb  land_cover_parser.py  test_notebook.ipynb
soil_data/: Senegal_pH_0-5_mean.tif  Untitled.ipynb  soil_data.ipynb  soil_data_parser.py  test.tif
streamlit_ui/: Home.py  README.md  bquxjob_2c525673_181e4342f32.csv  test.csv
streamlit_ui/assets/: about.md
streamlit_ui/pages/: _About_Us.py  _Land_Cover_Mapping.py  _Soil_Data.py  (+3 more)
