[tool.poetry]
name = "gbif"
version = "0.1.0"
description = "Landing Station for all your GBIF co-variates"
authors = ["tekritesh <ritesh.tekriwal03@gmail.com>"]

license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
noaa-sdk = "^0.1.21"
pandas = "^1.4.3"
meteostat = "^1.6.3"
DateTime = "^4.5"
logger = "^1.4"
earthengine-api = "^0.1.317"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
